@@ -27,7 +27,7 @@
 		public function touch($key)
 		{
 			try {
-				$shm = shm_attach($this->id, self::SEGMENT_SIZE, 0660);
+				$shm = shm_attach($this->id, self::SEGMENT_SIZE, ONPHP_IPC_PERMS);
 			} catch (BaseException $e) {
 				return false;
 			}
@@ -47,7 +47,7 @@
 		public function unlink($key)
 		{
 			try {
-				$shm = shm_attach($this->id, self::SEGMENT_SIZE, 0660);
+				$shm = shm_attach($this->id, self::SEGMENT_SIZE, ONPHP_IPC_PERMS);
 			} catch (BaseException $e) {
 				return false;
 			}
@@ -68,7 +68,7 @@
 		public function ping($key)
 		{
 			try {
-				$shm = shm_attach($this->id, self::SEGMENT_SIZE, 0660);
+				$shm = shm_attach($this->id, self::SEGMENT_SIZE, ONPHP_IPC_PERMS);
 			} catch (BaseException $e) {
 				return false;
 			}
@@ -89,7 +89,7 @@
 		public function drop()
 		{
 			try {
-				$shm = shm_attach($this->id, self::SEGMENT_SIZE, 0660);
+				$shm = shm_attach($this->id, self::SEGMENT_SIZE, ONPHP_IPC_PERMS);
 			} catch (BaseException $e) {
 				return false;
 			}
